# Zinc

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  test_compiler.sh  znc
examples/: demo  demo.zn  example10_wayland.zn  example1_hello.zn  example2_variables.zn  example3_control_flow.zn  example4_functions.zn  example5_comprehensive.zn  example6_pointers.zn  example7_recursion.zn  example9_fileio.zn  test.zn  test_input.zn
examples/example_import/: math.zn
scripts/: build.sh
src/: ast.cpp  ast.h  ast.zn  codegen.cpp  codegen.h  codegen.zn  lexer.cpp  lexer.h  lexer.zn  main.cpp  main.zn  parser.cpp  parser.h  parser.zn  typecheck.cpp  typecheck.h  typecheck.zn
src/16bit/: codegen16.zn
